--- a/Project ME/portfolio_v2.css
+++ b/Project ME/portfolio_v2.css
@@ -1,13 +1,9 @@
+
 @media (min-width: 576px) {
     .main {
         margin-top: 10%;
     }
     
-/*
-    .projects-desc{
-        visibility: hidden;
-    }
-*/
 }
 
 
@@ -15,48 +11,20 @@
     .main {
         margin-top: -0%;
     }
-/*
-    .projects-desc{
-        visibility: hidden;
-    }
-*/
-
 }
 
 @media (min-width: 992px) {
     .main {
         margin-top: -0%;
     }
-/*
-    .projects-desc{
-        visibility: visible;
-    }
-*/
-    
 }
 
 @media (min-width: 1200px) {
     .main {
         margin-top: -0%;
     }
-/*
-        .projects-desc{
-        visibility: visible;
-    }
-*/
-
 }          
 
-/*
-.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(xl) {
-    column-count: 5;
-  }
-}
-*/
 
 html,body{
     background-color: #36363c;
@@ -120,9 +88,9 @@ html,body{
 
 
 .projects-card{
-margin-top: 2rem;
-margin-left: 2rem;
-padding: 0 0 0 0;
+    margin: 0 auto;
+    padding: 0 0 0 0;
+    margin-top: 2rem;
 }
 
 .card-header{
@@ -134,6 +102,17 @@ padding: 0 0 0 0;
     font-size: 1rem;
 }
 
+h2 {
+    background-color: black;
+    text-align: center;
+    color: white;
+    margin: -5% -5% 5% -5%;
+}
+
+.analytics {
+    background-color: forestgreen;
+    padding: 10% 10% 10% 10%;
+}
 .title{
     color: white;
     margin-bottom: 1rem;
@@ -156,6 +135,16 @@ padding: 0 0 0 0;
     font-size: 0.8rem;
 }
 
+#nav-projects {
+/*
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+*/
+}
+
+.desc{
+    display: none;
+}
 #nav-exp{
     padding-top: 1rem;
 }
@@ -167,6 +156,11 @@ padding: 0 0 0 0;
 
 .card{
     border:none;
+    
+}
+
+.card-body{
+    text-align: center;
 }
 
 .nav a{
